--- a/src/data/posts/academy-abcs.mdx
+++ b/src/data/posts/academy-abcs.mdx
@@ -44,7 +44,7 @@ In order to respond to these challenges, the Codurance Academy places a high pre
 
 >That is in pursuit of the items on the left we have found the items on the right to be indispensable.
 
-The emphasis here is on a community of professionals who share values and skills freely. This has an intensely practical side. When modifying [legacy code](https://codurance.com/2020/09/29/is-it-even-possible-to-deliver-software-compliant-fast-and-correctly/) every step by an individual coder must be tested and recorded so that all can see it. The emphasis is on awareness of the need for openness and listening on the part of the craftsperson and the team for shared learning, development and cooperation. Ability to rollback is an important safeguard but depends on continuous testing, meticulous record keeping and a shared attitude of honesty about the contributions of team members. These are the building blocks of a functioning community of craftspeople who are able to understand problems and work to overcome them. At the Academy, knowledge is shared through regular code reviews, retrospectives and continuous feedback. Nonetheless, communication is not an end in itself but a means to push forward the work of the team and the individuals within it.
+The emphasis here is on a community of professionals who share values and skills freely. This has an intensely practical side. When modifying [legacy code](https://codurance.com/2020/09/29/is-it-even-possible-to-deliver-software-compliant-fast-and-correctly/) every step by an individual coder must be tested and recorded so that all can see it. The emphasis is on awareness of the need for openness and listening on the part of the developer and the team for shared learning, development and cooperation. Ability to rollback is an important safeguard but depends on continuous testing, meticulous record keeping and a shared attitude of honesty about the contributions of team members. These are the building blocks of a functioning community of craftspeople who are able to understand problems and work to overcome them. At the Academy, knowledge is shared through regular code reviews, retrospectives and continuous feedback. Nonetheless, communication is not an end in itself but a means to push forward the work of the team and the individuals within it.
 
 An Academy can also ensure that common values regarding testing and software quality are extended throughout the business. The essence of test driven development is that the tests are written before the code. Testing is no longer about just keeping defects from the users rather it is about helping the team to understand what features the end users need and to deliver them reliably and predictably. With this aim in mind apprentices are trained to use e2e testing, and behaviour driven testing. Here, the development process starts from the user so that work is completed efficiently and effectively.
 
@@ -60,7 +60,7 @@ Play involves non-goal directed exploration. It contrasts with the idea that lea
 
 ### What should an Academy offer?
  
-A company’s Academy could be viewed as a mathematical function taking in advanced beginners and outputting craftsperson practitioners to take their place in the software development team. Curious enthusiastic practitioners would be a benefit to any company. [Hunt](https://www.goodreads.com/book/show/3063393-pragmatic-thinking-and-learning) tells us:
+A company’s Academy could be viewed as a mathematical function taking in advanced beginners and outputting developer practitioners to take their place in the software development team. Curious enthusiastic practitioners would be a benefit to any company. [Hunt](https://www.goodreads.com/book/show/3063393-pragmatic-thinking-and-learning) tells us:
 
 > Always consider the context
 
@@ -98,7 +98,7 @@ Businesses need software developers who are able to manage stress effectively an
 
 The most effective metrics for efficiency will come from measurements derived from agile development practices. Burndowns will show how many development tasks are completed over time. Another very important metric for team agility is Mean time to repair (MTTR). The best metrics to measure the productivity of the software development team are those that we use to measure business results. Developers with adequate training should be able to communicate about and deliver high quality software that is useful for the end user. Regular check-ins with clients can provide crucial metrics for the team and will further enable developer progress. At Codurance, craftspeople and team members work hard to develop a positive feedback loop through regular bi-weekly demo sessions. An emphasis on presentation and improved communication can enable learning to be incorporated into the development process and in the best examples clients are able to provide live feedback to work for realignment and continuous improvement.
 
-Alongside wider team improvements each newly qualified craftsperson should show a series of competencies that will bring value to the team. Each craftsperson should be able to clearly present content and be competent in their chosen language and its ecosystem. Craftspeople should naturally apply XP and Agile processes and continually work incrementally to provide business value. Developers should know tech design representations to clearly communicate technical context and be able to set up a CI pipeline. These skills should be used by craftspeople to describe the values and message of the business and enable wider business success.
+Alongside wider team improvements each newly qualified developer should show a series of competencies that will bring value to the team. Each developer should be able to clearly present content and be competent in their chosen language and its ecosystem. Craftspeople should naturally apply XP and Agile processes and continually work incrementally to provide business value. Developers should know tech design representations to clearly communicate technical context and be able to set up a CI pipeline. These skills should be used by craftspeople to describe the values and message of the business and enable wider business success.
 
 ### What is the cost of starting an Academy?
 
