Add image for seo

--- a/src/data/posts/design-patterns.mdx
+++ b/src/data/posts/design-patterns.mdx
@@ -7,7 +7,7 @@ date: '2020-06-08'
 These two simple terms are the main if not the most important way to think about
 software. In order to make a judgement about a code-base we can use the extent of coupling
 and cohesion to determine whether it is good or not. Cohesion could involve looking at a class
-to detaermine to what extent the methods in the class are closely related. Another way to think
+to determine to what extent the methods in the class are closely related. Another way to think
 about cohesion could involve considering a http request response web controller. On looking at a controller
 method you don't want the action to include module related to pdf generation and also a series of procedures
 relating to tax calculation since these responsibilities don't belong together. 
