--- a/src/data/posts/inversion-of-control-container.mdx
+++ b/src/data/posts/inversion-of-control-container.mdx
@@ -1,6 +1,9 @@
 ---
 title: 'Inversion of Control Container'
 date: '2022-06-26'
+summary: 'Inversion of control with Spring'
+slug: 'inversion-of-control-container'
+image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 ---
 
 ##### Inversion of Control
