--- a/src/data/posts/inversion-of-control-container.mdx
+++ b/src/data/posts/inversion-of-control-container.mdx
@@ -3,7 +3,7 @@ title: 'Inversion of Control Container'
 date: '2022-06-26'
 summary: 'Inversion of control with Spring'
 slug: 'inversion-of-control-container'
-image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
+image: '_next/image?url=%2Fimg%2Fweb-header.jpg'
 ---
 
 ##### Inversion of Control
