--- a/src/data/posts/pitest-coverage.mdx
+++ b/src/data/posts/pitest-coverage.mdx
@@ -6,10 +6,10 @@ slug: 'pitest-maven-setup'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 ---
 
-##### PiTest
+##### [PITest](https://pitest.org/)
 
 PIT provides parallel isolated tests and is useful for Mutation testing on applications to ensure test coverage.
-[<img width="1233" alt="PITest site" src="https://user-images.githubusercontent.com/27693622/176157326-d98bb769-078e-4cf6-8a14-b815c812bc25.png">](https://pitest.org/)
+<img width="1233" alt="PITest site" src="https://user-images.githubusercontent.com/27693622/176157326-d98bb769-078e-4cf6-8a14-b815c812bc25.png">
 Mutation testing is a type of Software Testing that is performed to evaluate the quality of an application's test suite.
 Mutation testing involves modifying the program in small ways. The coverage report provided by PITest can help to
 make tests more effective or locate weaknesses in the test data used for the program. In this article we will look at
@@ -88,8 +88,8 @@ But it is also possible to run this using the maven goal from IntelliJ like so:
 
 #### Test coverage
 Once you have run PITest you are then provided with a test report. I include a viewable test report for my Quiz
-application here:
-[<img width="1233" alt="PITest report" src="https://user-images.githubusercontent.com/27693622/175924939-265713dd-180e-4f57-9f72-8c62948ddfc9.png">](https://htmlpreview.github.io/?https://github.com/TomSpencerLondon/Quiz/blob/main/docs/coverage/index.html)
+application [here](https://htmlpreview.github.io/?https://github.com/TomSpencerLondon/Quiz/blob/main/docs/coverage/index.html):
+<img width="1233" alt="PITest report" src="https://user-images.githubusercontent.com/27693622/175924939-265713dd-180e-4f57-9f72-8c62948ddfc9.png">
 
 #### Extra
 Try setting up and running PITest on your own project and then viewing the reports to check coverage.
