Add correct description to article

--- a/src/data/posts/git-essentials.mdx
+++ b/src/data/posts/git-essentials.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Inversion of Control Container'
-date: '2022-06-26'
-summary: 'Inversion of control with Spring'
-slug: 'inversion-of-control-container'
+title: 'Git Essentials'
+date: '2022-06-30'
+summary: 'Git from the bottom up'
+slug: 'git-essentials'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 ---
 
