Delete extra backticks

--- a/src/data/posts/git-essentials.mdx
+++ b/src/data/posts/git-essentials.mdx
@@ -71,7 +71,7 @@ You can also check your config with:
 ```bash
 git config --list
 ```
-The command ```git help``` give us a handy list possible git commands:
+The command ``git help`` give us a handy list possible git commands:
 ```bash
 These are common Git commands used in various situations:
 
@@ -130,7 +130,7 @@ In order to track an existing directory or project you should navigate to the di
 git init
 ```
 This creates a new subdirectory named .git that contains all the necessary repository files. At this point, we haven't added
-anything to be tracked. In order to track files in your directory you should run ```git add``` and then
+anything to be tracked. In order to track files in your directory you should run ``git add`` and then
 ``git commit``:
 ```bash
 git add README.md
