Try again with indented quotes

--- a/src/data/posts/spring-external-configuration.mdx
+++ b/src/data/posts/spring-external-configuration.mdx
@@ -95,9 +95,8 @@ We then run our application like so:
  java -jar target/config-test-0.0.1-SNAPSHOT.jar
 ```
 And we see in our browser on **localhost:8080**:
-```
-EmailConfiguration{serverName='smtp.email.com', email='tom@email.com'}
-```
+> EmailConfiguration{serverName='smtp.email.com', email='tom@email.com'}
+
 This means we have successfully referred to our application.properties file to set values in our application. Yay!
 
 #### 2. Java system properties
@@ -107,9 +106,8 @@ java -Dconfig-test.email.email=wim@wim-email.com -Dconfig-test.email.server-name
 ```
 This allows us to set the variables as system properties and the values take precedence over the values set in our application.properties.
 We see the following on the browser on **localhost:8080**:
-```
-EmailConfiguration{serverName='smtp.wim-email.com', email='wim@wim-email.com'}
-```
+> EmailConfiguration{serverName='smtp.wim-email.com', email='wim@wim-email.com'}
+
 It works. Yay!
 
 #### 3. Command line arguments
@@ -118,9 +116,8 @@ We can also set the correct values as command line arguments when we run our jar
 java -jar target/config-test-0.0.1-SNAPSHOT.jar --config-test.email.email=wim@wim-email.com --config-test.email.server-name=smtp.wim-email.com
 ```
 Again we see the correct values in the browser on **localhost:8080**:
-```
-EmailConfiguration{serverName='smtp.wim-email.com', email='wim@wim-email.com'}
-```
+> EmailConfiguration{serverName='smtp.wim-email.com', email='wim@wim-email.com'}
+
 Success!
 
 #### 4. OS Environment variables
@@ -141,9 +138,7 @@ Now when we run the jar command:
 java -jar target/config-test-0.0.1-SNAPSHOT.jar
 ```
 We also see the correct values on **localhost:8080**:
-```
-EmailConfiguration{serverName='smtp.wim-email.com', email='wim@wim-email.com'}
-```
+> EmailConfiguration{serverName='smtp.wim-email.com', email='wim@wim-email.com'}
 
 So there you have it, a little tour of setting values for running spring jar files with external configuration.
 Very useful when we want to set values from outside our application without having to recompile the whole application.
