--- a/src/data/posts/spring-external-configuration.mdx
+++ b/src/data/posts/spring-external-configuration.mdx
@@ -140,5 +140,6 @@ java -jar target/config-test-0.0.1-SNAPSHOT.jar
 We also see the correct values on **localhost:8080**:
 > EmailConfiguration{serverName='smtp.wim-email.com', email='wim@wim-email.com'}
 
+#### Conclusion
 So there you have it, a little tour of setting values for running spring jar files with external configuration.
 Very useful when we want to set values from outside our application without having to recompile the whole application.
