Check with hello message

--- a/src/data/posts/spring-external-configuration.mdx
+++ b/src/data/posts/spring-external-configuration.mdx
@@ -6,11 +6,4 @@ slug: 'spring-external-configuration'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 ---
 
-#### Spring External Configuration
-I wanted to share a little experimentation I did with Spring externalized configuration. The idea came when looking at Wim
-Deblauwe's book [Practical Guide to Building an API Back End with Spring Boot](https://www.infoq.com/minibooks/spring-boot-building-api-backend/).
-In his book I was working on the REST API Security chapter and missed a properties value in the **AuthorizationServerConfiguration**
-class. The Spring [docs](https://docs.spring.io/spring-boot/docs/current/reference/html/features.html#features.external-config) 
-lists 14 different ways to configure property values and I found this list a bit overwhelming!
-
-<img width="983" alt="Screenshot 2022-07-09 at 11 42 43" src="https://user-images.githubusercontent.com/27693622/178102390-d37a1576-acaa-4478-b22f-ac19f94fa6cc.png">
+Hello
