--- a/src/data/posts/spring-external-configuration.mdx
+++ b/src/data/posts/spring-external-configuration.mdx
@@ -6,4 +6,6 @@ slug: 'spring-external-configuration'
 image: '_next/image?url=%2Fimg%2Fweb-header.jpg&w=3840&q=75'
 ---
 
-Hello
+#### Spring External Configuration
+I wanted to share a little experimentation I did with Spring externalized configuration. The idea came when looking at Wim
+Deblauwe's book [Practical Guide to Building an API Back End with Spring Boot](https://www.infoq.com/minibooks/spring-boot-building-api-backend).
