--- a/src/data/posts/spring-external-configuration.mdx
+++ b/src/data/posts/spring-external-configuration.mdx
@@ -22,7 +22,7 @@ fingers.
 The options I will show you in this article cover the majority of possible use cases. I looked at the following
 configuration
 options:
-```
+```bash
 3. Config data (such as application.properties files)
 5. OS environment variables
 6. Java System properties (System.getProperties())
