--- a/src/data/posts/spring-external-configuration.mdx
+++ b/src/data/posts/spring-external-configuration.mdx
@@ -19,7 +19,7 @@ lists 14 different ways to configure property values and I found this list a bit
 These options become available when you add **@ConfigurationProperties** to an existing class in your application.
 So I decided to look at some of the options for a small application to at least get some of the options under my
 fingers.
-The options I will show you in this article cover the majority of possible use cases. I looked at the following
+The options I will show you in this article cover most realistic use cases when running applications in the wild. I looked at the following
 configuration
 options:
 ```bash
