Refactor: Add colon for title

--- a/src/data/posts/solutions-architect-associate-intro.mdx
+++ b/src/data/posts/solutions-architect-associate-intro.mdx
@@ -95,7 +95,7 @@ Take notes whenever necessary.
 If you are not working with AWS every day it will be useful to take the [AWS Certified Cloud Practitioner](https://aws.amazon.com/certification/certified-cloud-practitioner/)
 before trying the Solutions Architect Associate so that you have a good grounding in the basics.
 
-### Exam at a glance
+### Exam at a glance:
 ![Exam questions](https://user-images.githubusercontent.com/27693622/195697986-a6722200-3be9-47cf-9191-b42a203bf682.png)
 
 ![Exam score](https://user-images.githubusercontent.com/27693622/195697996-b7454b97-fa46-4785-ab05-531d040c690a.png)
