Add article for AWS Solutions Architect Associate Overview

--- a/src/data/posts/solutions-architect-associate-intro.mdx
+++ b/src/data/posts/solutions-architect-associate-intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Solutions Architect Associate Overview'
+title: 'Solutions Architect Associate Introduction'
 date: '2022-04-22'
 ---
 
