Add Elastic Load Balancing

--- a/src/data/posts/solutions-architect-associate-overview.mdx
+++ b/src/data/posts/solutions-architect-associate-overview.mdx
@@ -42,7 +42,9 @@ We then configure our Auto Scaling to have a minimum, maximum and desired capaci
 The load balancer will then create instances as required.
 
 #### 7 Elastic Load Balancing
-
+![image](https://user-images.githubusercontent.com/27693622/201609697-5e279559-c520-4439-bed6-278d1d03232c.png)
+Here we can see that we can set rules for the listener from the Application Load Balancer.
+According to the rule we can then direct the traffic to the appropriate Target Group.
 #### 8. Elastic Beanstalk
 
 #### 9. Virtual Private Cloud (VPC)
