--- a/src/data/posts/setup-rds-with-postgres.mdx
+++ b/src/data/posts/setup-rds-with-postgres.mdx
@@ -46,3 +46,24 @@ After that click ‘Create database’ and then wait for it to get created. Afte
 ![rds-password](https://user-images.githubusercontent.com/27693622/208517968-04c8a044-ef9c-46ec-8579-0331061a4212.png)
 
 ![rds-endpoint](https://user-images.githubusercontent.com/27693622/208518039-24331411-0fea-4a0d-94d3-8e1be459e717.png)
+
+
+Next set up your postgres connection using the details from your RDS instance.
+<img width="1107" alt="postgres-connection" src="https://user-images.githubusercontent.com/27693622/208518340-a5ebb5d7-aa27-4b29-a048-23a29d5b8c23.png">
+
+You should then be able to do this SQL query to list all users in PostgreSQL.
+```
+    SELECT usename AS role_name,
+    CASE
+    WHEN usesuper AND usecreatedb THEN
+    CAST('superuser, create database' AS pg_catalog.text)
+    WHEN usesuper THEN
+    CAST('superuser' AS pg_catalog.text)
+    WHEN usecreatedb THEN
+    CAST('create database' AS pg_catalog.text)
+    ELSE
+    CAST('' AS pg_catalog.text)
+    END role_attributes
+    FROM pg_catalog.pg_user
+    ORDER BY role_name desc;
+```
