--- a/src/data/posts/setup-rds-with-postgres.mdx
+++ b/src/data/posts/setup-rds-with-postgres.mdx
@@ -49,5 +49,21 @@ After that click ‘Create database’ and then wait for it to get created. Afte
 
 
 Next set up your postgres connection using the details from your RDS instance.
-<img width="1107" alt="postgres-connection" src="https://user-images.githubusercontent.com/27693622/208518340-a5ebb5d7-aa27-4b29-a048-23a29d5b8c23.png">
+![postgres-connection](https://user-images.githubusercontent.com/27693622/208524182-bb2e6ebb-2894-4e8b-b617-adc2843e4075.png)
 
+You can then do this query on the database:
+```
+SELECT usename AS role_name,
+ CASE
+ WHEN usesuper AND usecreatedb THEN
+  CAST('superuser, create database' AS pg_catalog.text)
+ WHEN usesuper THEN
+  CAST('superuser' AS pg_catalog.text)
+ WHEN usecreatedb THEN
+  CAST('create database' AS pg_catalog.text)
+ ELSE
+  CAST('' AS pg_catalog.text)
+ END role_attributes
+FROM pg_catalog.pg_user
+ORDER BY role_name desc;
+```
