--- a/src/data/posts/setup-rds-with-postgres.mdx
+++ b/src/data/posts/setup-rds-with-postgres.mdx
@@ -3,7 +3,7 @@ title: 'Set up AWS RDS with Postgres'
 date: '2022-12-19'
 ---
 
-Hey fellow AWS Cloud Builders! This is an overview of how to connect to cloud database RDS instance on AWS.
+Hey fellow AWS Cloud Builders! This is an overview of how to connect to a cloud database RDS instance on AWS.
 
 ![rds-front](https://user-images.githubusercontent.com/27693622/208445090-2fe302d2-6a18-4f83-921f-96b75a53ef5d.png)
 
